# erver

./: CMakeLists.txt  CutomerServer.sln  README.md  X_Server.sln  changelog.txt
CenterServer/: ActivityMgr.cpp  ActivityMgr.h  CMakeLists.txt  CenterServer.cpp  CenterServer.vcxproj  CenterServer.vcxproj.filters  CenterThread.cpp  CenterThread.h  CenterThread2.cpp  ConfigOption.cpp  ConfigOption.h  DuoBaoMgr.cpp  DuoBaoMgr.h  Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  HongBaoMgr.cpp  HongBaoMgr.h  RankMgr.cpp  RankMgr.h  ReadMe.txt  RedPacketMgr.cpp  RedPacketMgr.h  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h  SystemMsgMgr.cpp  SystemMsgMgr.h  UserMgr.cpp  UserMgr.h  UserTask.cpp  UserTask.h  WXGroupMgr.cpp  WXGroupMgr.h  stdafx.h
CustomerServer/: CMakeLists.txt  CustomerServer.cpp  CustomerThread.cpp  CustomerThread.h  CutomerServer.vcxproj  CutomerServer.vcxproj.filters  QueryRecordThread.cpp  QueryRecordThread.h  ReadMe.txt  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h
DBBufferServer/: BuildDBThread.cpp  BuildDBThread.h  CMakeLists.txt  DBBufferServer.cpp  DBBufferServer.vcxproj  DBBufferServer.vcxproj.filters  DBThread.cpp  DBThread.h  ReadMe.txt  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h
DdzAi/: ~$接口说明.docx  接口说明.docx  接口说明ex.docx
DipServer/: CMakeLists.txt  DipServer.cpp  DipServer.vcxproj  DipServer.vcxproj.filters  DipThread.cpp  DipThread.h  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h  stdafx.cpp  targetver.h
GameServer/: AndroidUserItem.cpp  AndroidUserItem.h  AndroidUserMgr.cpp  AndroidUserMgr.h  CMakeLists.txt  DdzAiThread.cpp  DdzAiThread.h  FishControl.cpp  FishControl.h  FishServerCfg.cpp  FishServerCfg.h  GameServer.cpp  GameServer.vcxproj  GameServer.vcxproj.filters  GameServerThread.cpp  GameServerThread.h  GameTableManager.cpp  GameTableManager.h  Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  ServerCfg.cpp  ServerCfg.h  ServerUserItem.cpp  ServerUserItem.h  TableFrame.cpp  TableFrame.h  TableFrameForScore.cpp  TableFrameForScore.h
GameServer_fish/: AndroidUserItem.cpp  AndroidUserItem.h  AndroidUserMgr.cpp  AndroidUserMgr.h  CMakeLists.txt  GameServer.cpp  GameServerThread.cpp  GameServerThread.h  GameServer_fish.vcxproj  GameServer_fish.vcxproj.filters  GameTableManager.cpp  GameTableManager.h  Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h  ServerUserItem.cpp  ServerUserItem.h  TableFrame.cpp  TableFrame.h  TableFrameForScore.cpp  TableFrameForScore.h  WXGroupMgr.cpp  WXGroupMgr.h
LoginServer/: CMakeLists.txt  ExchangePostThread.cpp  ExchangePostThread.h  IpParse.cpp  IpParse.h  LoginRecordThread.cpp  LoginRecordThread.h  LoginServer.cpp  LoginServer.vcxproj  LoginServer.vcxproj.filters  LoginServerThread.cpp  LoginServerThread.h  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h  VerificationCodeThread.cpp  VerificationCodeThread.h  httplib.h
MaintainService/: CMakeLists.txt  MaintainServer.cpp  MaintainService.vcxproj  MaintainService.vcxproj.filters  MaintainThread.cpp  MaintainThread.h  ServerCfg.cpp  ServerCfg.h  stdafx.h
NetModule/: Base64.h  CDBConnector.h  CMakeLists.txt  DataQueue.h  File.cpp  File.h  FileAPI.cpp  FileAPI.h  IFile.h  IMutex.h  Ipv4Address.cpp  Ipv4Address.h  Ipv6Address.cpp  Ipv6Address.h  MemPool.h  MesBlock.h  Mutex.cpp  Mutex.h  NetConnector.cpp  NetConnector.h  NetEncrypt.h  NetModule.cpp  NetModule.h  NetModule.vcxproj  NetModule.vcxproj.filters  NetServer.cpp  NetServer.h  ObjPool.h  Parse.cpp  Parse.h  PaseIni.cpp  PaseIni.h  ReadMe.txt  ReadWriteBuffer.cpp  ReadWriteBuffer.h  Semaphoreex.cpp  Semaphoreex.h  Singleton.h  SocketAddress.h  Thread.cpp  (+17 more)
ProxyServer/: CMakeLists.txt  ProxyServer.cpp  ProxyServer.vcxproj  ProxyServer.vcxproj.filters  ProxyThread.cpp  ProxyThread.h  ServerCfg.cpp  ServerCfg.h  ServerMgr.cpp  ServerMgr.h
include/: CGlobalData.h  CMD_ConFish.h  CMD_Customer.h  CMD_Dip.h  CMD_Game.h  CMD_Inner.h  CMD_Maintain.h  CMD_Plaza.h  CMD_ShareMsg.h  CTData.h  CTType.h  DdzAiStruct.h  GlobalEnum.h  GlobalStruct.h  IAndroidUserItemSink.h  IGameOtherData.h  IServerUserItem.h  ITableFrame.h  ITableFrameSink.h  TypeConvert.h  testlog.h
lib/: libglog_static_d.lib
logic_JSFish/: CMakeLists.txt  F_JsBu.h  GameLogic.h  GameProcess.cpp  GameProcess.h  Logic_JSFish.vcxproj  Logic_JSFish.vcxproj.filters  MSG_JSFish.h  stdafx.cpp
logic_JSFish_android/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  CMakeLists.txt  GameLogic.h  MSG_JS_FISH.h  logic_JSFish_android.vcxproj  logic_JSFish_android.vcxproj.filters
logic_br_nn_score/: CMakeLists.txt  GameLogic.cpp  GameProcess.cpp  GameProcess.h  MSG_BR_NN_SCORE.h  logic_br_nn_score.vcxproj  logic_br_nn_score.vcxproj.filters
logic_br_nn_score_android/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  CMakeLists.txt  GameLogic.h  (+3 more)
logic_pdk/: CMakeLists.txt  GameLogic.cpp  GameLogic.h  GameProcess.cpp  GameProcess.h  Logic_PDK_16.vcxproj  Logic_PDK_16.vcxproj.filters  MSG_PDK_16.h
(+318 files in other folders)
