cmake_minimum_required(VERSION 3.10)
project(workspace)

set(CMAKE_CXX_STANDARD 11)

# 引入子目录
#ADD_SUBDIRECTORY(NetModule)
ADD_SUBDIRECTORY(DBBufferServer)
ADD_SUBDIRECTORY(CenterServer)
ADD_SUBDIRECTORY(LoginServer)
ADD_SUBDIRECTORY(ProxyServer)
ADD_SUBDIRECTORY(GameServer)
#ADD_SUBDIRECTORY(GameServer_fish)

ADD_SUBDIRECTORY(logic_ddz_score)
ADD_SUBDIRECTORY(logic_ddz_androidEx)
ADD_SUBDIRECTORY(logic_zjh_score)
ADD_SUBDIRECTORY(logic_zjh_score_android)
#ADD_SUBDIRECTORY(logic_nn_score)
#ADD_SUBDIRECTORY(logic_nn_score_android)

ADD_SUBDIRECTORY(logic_hhdz_score)
#ADD_SUBDIRECTORY(logic_hhdz_score_android)
ADD_SUBDIRECTORY(logic_br_nn_score)
ADD_SUBDIRECTORY(logic_br_nn_score_android)
#ADD_SUBDIRECTORY(logic_lhd_score)
#ADD_SUBDIRECTORY(logic_lhd_score_android)
#ADD_SUBDIRECTORY(logic_pdk_score)
#ADD_SUBDIRECTORY(logic_pdk_android)
ADD_SUBDIRECTORY(logic_ld_fpf_score)
ADD_SUBDIRECTORY(logic_red_packet_score)
ADD_SUBDIRECTORY(logic_red_packet_score_android)
ADD_SUBDIRECTORY(logic_dcdf_score)
ADD_SUBDIRECTORY(logic_dcdf_score_android)
ADD_SUBDIRECTORY(logic_jznc_score)
ADD_SUBDIRECTORY(logic_jznc_score_android)
#ADD_SUBDIRECTORY(logic_fish)

ADD_SUBDIRECTORY(DipServer)
ADD_SUBDIRECTORY(MaintainService)
ADD_SUBDIRECTORY(CustomerServer)
#ADD_SUBDIRECTORY(redisTodb)